--- a/gradle.properties
+++ b/gradle.properties
@@ -50,6 +50,11 @@ springCloudConfigVersion=1.1.2.RELEASE
 springCloudStarterVersion=1.1.1.RELEASE
 springCloudContextVersion=1.1.1.RELEASE
 
+eurekaClientVersion=1.4.11
+netflixServoVersion=0.10.1
+jerseyClientVersion=1.19.1
+springCloudEurekaVersion=1.1.5.RELEASE
+
 springCloudBusVersion=1.1.0.RELEASE
 springCloudVaultVersion=1.0.0.BUILD-SNAPSHOT
 
