--- a/cas-server-support-actions/build.gradle
+++ b/cas-server-support-actions/build.gradle
@@ -8,11 +8,11 @@ dependencies {
     compile project(":cas-server-core-services")
     compile project(":cas-server-core-configuration")
     compile project(":cas-server-support-geolocation")
+    compile project(":cas-server-core-logout")
     compile libraries.spring
     runtime libraries.hibernate
     testCompile project(":cas-server-core")
     testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
-    testCompile project(":cas-server-core-logout")
     testCompile project(path: ":cas-server-core", configuration: "tests")
     testCompile project(":cas-server-core-monitor")
     testCompile project(path: ":cas-server-core-tickets", configuration: "tests")
