--- a/settings.gradle
+++ b/settings.gradle
@@ -101,6 +101,7 @@ include "cas-server-support-grouper"
 include "cas-server-support-memcached-monitor"
 include "cas-server-support-ehcache-ticket-registry"
 include "cas-server-support-ehcache-monitor"
+include 'cas-server-support-redis-ticket-registry'
 include "cas-server-support-pac4j-authentication"
 include "cas-server-support-pac4j-core"
 include "cas-server-support-shell"
@@ -135,3 +136,4 @@ include "cas-server-webapp"
 include "cas-management-webapp"
 include "cas-management-webapp-support"
 include "cas-management-webapp-support-ldap"
+
