Set spring.jmx.default-domain in bootstrap.properties in cas-server-webapp and cas-management-webapp so there are no naming collisions resulting in an MBeanException

--- a/cas-server-webapp/src/main/resources/bootstrap.properties
+++ b/cas-server-webapp/src/main/resources/bootstrap.properties
@@ -22,3 +22,4 @@ spring.cloud.config.server.native.searchLocations=file:///etc/cas/config
 # spring.cloud.config.server.git.password=
 spring.cloud.config.server.bootstrap=true
 spring.cloud.config.server.prefix=/configserver
+spring.jmx.default-domain=server
