--- a/cas-management-webapp/src/main/resources/bootstrap.properties
+++ b/cas-management-webapp/src/main/resources/bootstrap.properties
@@ -12,3 +12,4 @@ spring.cloud.config.server.bootstrap=true
 spring.application.name=management
 spring.cloud.config.fail-fast=true
 spring.cloud.config.server.prefix=/configserver
+spring.jmx.default-domain=management
