--- a/build.gradle
+++ b/build.gradle
@@ -273,7 +273,7 @@ buildscript {
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
         classpath "com.netflix.nebula:gradle-lint-plugin:5.0.0"
-        classpath "com.github.ben-manes:gradle-versions-plugin:0.13.0"
+        classpath "org.standardout:gradle-versioneye-plugin:1.4.0"
         classpath "org.springframework.build.gradle:propdeps-plugin:0.0.7"
         classpath "com.gradle:build-scan-plugin:1.0"
     }
@@ -284,7 +284,7 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "maven"
     apply plugin: "signing"
-    apply plugin: "com.github.ben-manes.versions"
+    apply plugin: "org.standardout.versioneye"
     apply plugin: "nebula.lint"
 
     gradleLint.rules = ["dependency-parentheses", "dependency-tuple"]
@@ -434,6 +434,11 @@ subprojects {
         enabled = !Boolean.getBoolean("skipCheckstyle")
     }
 
+    versioneye {
+        includePlugins = false
+        includeSubProjects = true
+    }
+    
     findbugs {
         toolVersion = "${findbugsVersion}"
         sourceSets = [sourceSets.main]
