--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -453,10 +453,12 @@ ext.libraries = [
                     exclude(group: "org.slf4j", module: "slf4j-api")
                     exclude(group: "javax.validation", module: "validation-api")
                     exclude(group: "org.aspectj", module: "aspectjrt")
+                    exclude(group: "org.hjson", module: "hjson")
                     force = true
                 },
                 dependencies.create("org.apereo.inspektr:inspektr-support-spring:$inspektrVersion") {
                     exclude(group: "org.slf4j", module: "slf4j-api")
+                    exclude(group: "org.hjson", module: "hjson")
                     exclude(group: "javax.validation", module: "validation-api")
                     exclude(group: "org.springframework", module: "spring-web")
                     exclude(group: "org.springframework", module: "spring-webmvc")
@@ -1217,6 +1219,7 @@ ext.libraries = [
                     force = true
                 },
                 dependencies.create("org.springframework.cloud:spring-cloud-starter-bus-amqp:$springCloudBusVersion") {
+                    exclude(group: "org.springframework.retry", module: "spring-retry")
                     exclude(group: "com.fasterxml.jackson.core", module: "jackson-databind")
                     exclude(group: "com.fasterxml.jackson.core", module: "jackson-core")
                     exclude(group: "org.springframework.boot", module: "spring-boot-starter")
@@ -1254,6 +1257,7 @@ ext.libraries = [
                     exclude(group: "org.springframework", module: "spring-webmvc")
                     exclude(group: "org.springframework", module: "spring-messaging")
                     exclude(group: "org.slf4j", module: "slf4j-api")
+                    exclude(group: "org.springframework.retry", module: "spring-retry")
                     exclude(group: "commons-codec", module: "commons-codec")
                     exclude(group: "com.fasterxml", module: "classmate")
                     exclude(group: "org.apache.httpcomponents", module: "httpclient")
@@ -1267,7 +1271,7 @@ ext.libraries = [
                 }
         ],
         springcloudvault        : [
-                dependencies.create("org.springframework.cloud:spring-cloud-vault-starter-config:$springCloudVaultVersion") {
+                dependencies.create("org.springframework.cloud:spring-cloud-vault-starter-config:$springCloudStarterConfigVersion") {
                     exclude(group: "org.springframework", module: "spring-tx")
                     exclude(group: "org.springframework", module: "spring-aop")
                     exclude(group: "org.springframework", module: "spring-beans")
@@ -1299,6 +1303,7 @@ ext.libraries = [
                     exclude(group: "org.springframework", module: "spring-messaging")
                     exclude(group: "org.springframework", module: "spring-tx")
                     exclude(group: "org.springframework", module: "spring-aop")
+                    exclude(group: "org.springframework.retry", module: "spring-retry")
                     exclude(group: "org.springframework", module: "spring-core")
                     exclude(group: "org.springframework", module: "spring-context")
                     exclude(group: "com.fasterxml.jackson.core", module: "jackson-databind")
