Updated flow config to handle remember-me authn automatically.

--- a/cas-server-core-webflow/build.gradle
+++ b/cas-server-core-webflow/build.gradle
@@ -1,8 +1,8 @@
-
 description = "Apereo CAS Core Webflow"
 dependencies {
     compile libraries.spring
     compile libraries.hibernate
+    compile libraries.guava
     compile project(":cas-server-core-api-authentication")
     compile project(":cas-server-core-web")
     compile project(":cas-server-core-api-ticket")
