--- a/cas-server-support-redis-ticket-registry/build.gradle
+++ b/cas-server-support-redis-ticket-registry/build.gradle
@@ -1,8 +1,13 @@
-description = "Apereo CAS Redis Integration"
+description = "Apereo CAS Redis Ticket Registry"
 
 dependencies {
     compile project(":cas-server-core-tickets")
     compile project(":cas-server-core-services")
     compile project(":cas-server-core-configuration")
     compile libraries.springbootredis
+    testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
+    testCompile project(":cas-server-core-services")
+    testCompile project(path: ":cas-server-core-services", configuration: "tests")
+    testCompile project(":cas-server-core-util")
+    testCompile project(":cas-server-core-logout")
 }
