--- a/cas-server-support-redis-ticket-registry/src/test/resources/application.properties
+++ b/cas-server-support-redis-ticket-registry/src/test/resources/application.properties
@@ -1,3 +1,3 @@
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.pool.max-active=20
+cas.ticket.registry.redis.host=localhost
+cas.ticket.registry.redis.port=6379
+cas.ticket.registry.redis.pool.max-active=20
