--- a/gradle.properties
+++ b/gradle.properties
@@ -165,5 +165,7 @@ infinispanVersion=8.2.2.Final
 spockVersion=1.0-groovy-2.4
 jfigletVersion=0.0.7
 
+embeddedRedisVersion=0.6
+
 # Used by VersionEye to keep track of dependency versions
 versioneye.projectid=5677b4a5107997002d00131b
