--- a/cas-server-support-redis-ticket-registry/build.gradle
+++ b/cas-server-support-redis-ticket-registry/build.gradle
@@ -5,10 +5,10 @@ dependencies {
     compile project(":cas-server-core-services")
     compile project(":cas-server-core-configuration")
     compile libraries.springbootredis
+    testCompile libraries.embeddedRedis
     testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
     testCompile project(":cas-server-core-services")
     testCompile project(path: ":cas-server-core-services", configuration: "tests")
     testCompile project(":cas-server-core-util")
     testCompile project(":cas-server-core-logout")
-    testCompile group: 'com.github.kstyrc', name: 'embedded-redis', version: '0.6'
 }
