--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1611,5 +1611,11 @@ ext.libraries = [
                     exclude(group: "org.json", module: "json")
                     force = true
                 }
+        ],
+        embeddedRedis           : [
+                dependencies.create("com.github.kstyrc:embedded-redis:$embeddedRedisVersion") {
+                    exclude(module: "commons-io")
+                    force = true
+                }
         ]
 ]
