--- a/cas-server-support-pac4j/build.gradle
+++ b/cas-server-support-pac4j/build.gradle
@@ -41,6 +41,9 @@ dependencies {
         exclude(group: 'org.opensaml', module: 'xmltooling')
         exclude(group: 'commons-io', module: 'commons-io')
     }
+    compile(group: 'net.minidev', name: 'json-smart', version: '1.3.1') {
+
+    }
     testCompile project(path: ":cas-server-core-authentication", configuration: "tests")
     testCompile project(':cas-server-core-services')
     testCompile project(path: ":cas-server-core-services", configuration: "tests")
