Fix dependency issues with pac4j

--- a/gradle.properties
+++ b/gradle.properties
@@ -135,9 +135,14 @@ hsqlVersion=2.3.4
 hikariVersion=2.4.7
 postgresqlVersion=9.4.1208.jre7
 mysqlVersion=6.0.3
-
+mariaDbVersion=1.4.6
+        
 shiroVersion=1.2.6
 jose4jVersion=0.5.2
+
+nimbusJoseVersion=4.26
+nimbusOidcVersion=5.16
+jsonSmartVersion=1.3.1
 
 opensamlVersion=3.2.0
 idpVersion=3.2.1
