--- a/cas-server-support-jdbc-drivers/build.gradle
+++ b/cas-server-support-jdbc-drivers/build.gradle
@@ -3,4 +3,5 @@ dependencies {
     runtime "org.hsqldb:hsqldb:$hsqlVersion"
     runtime "org.postgresql:postgresql:$postgresqlVersion"
     runtime "mysql:mysql-connector-java:$mysqlVersion"
+    runtime "org.mariadb.jdbc:mariadb-java-client:$mariaDbVersion"
 }
