Enabled incremental compiles. Fixed submit button issue

--- a/build.gradle
+++ b/build.gradle
@@ -398,7 +398,11 @@ subprojects {
 
     ext.buildDate = null
     ext.buildJarFile = new File(project.buildDir, "libs/${project.name}-${project.version}.jar")
-        
+
+    compileJava {
+        options.incremental = true
+    }
+    
     compileJava.doLast {
         buildDate = java.time.ZonedDateTime.now()
         jar.manifest {
