Fixed dependency version

--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1287,7 +1287,7 @@ ext.libraries = [
                 }
         ],
         springcloudvault        : [
-                dependencies.create("org.springframework.cloud:spring-cloud-vault-starter-config:$springCloudStarterConfigVersion") {
+                dependencies.create("org.springframework.cloud:spring-cloud-vault-starter-config:$springCloudVaultVersion") {
                     exclude(group: "org.springframework", module: "spring-tx")
                     exclude(group: "org.springframework", module: "spring-aop")
                     exclude(group: "org.springframework", module: "spring-beans")
