Add Brian Clozel to the list of collaborators

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ issuebot:
       organization: spring-projects
       name: spring-boot
       collaborators:
+        - bclozel
         - dsyer
         - philwebb
         - snicoll
