--- a/build.gradle
+++ b/build.gradle
@@ -449,14 +449,16 @@ subprojects {
         ignoreFailures = false
         reportsDir = file("$project.buildDir/findbugsReports")
         effort = "max"
-        reportLevel = "high"
-        visitors = ["FindSqlInjection", "SwitchFallthrough"]
-        omitVisitors = ["FindNonShortCircuit"]
+        reportLevel = "low"
         includeFilter = file("$rootProject.projectDir/findbugs-rules.xml")
     }
 
     findbugsMain {
         enabled = !Boolean.getBoolean("skipFindbugs")
+        reports {
+            xml.enabled = false
+            html.enabled = true
+        }
     }
 
     findbugsTest {
