--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -33,6 +33,7 @@ server.tomcat.protocol-header=X-Forwarded-Proto
 server.tomcat.protocol-header-https-value=https
 server.tomcat.remote-ip-header=X-FORWARDED-FOR
 server.tomcat.uri-encoding=UTF-8
+server.error.include-stacktrace=ALWAYS
         
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
