--- a/cas-server-core-configuration/build.gradle
+++ b/cas-server-core-configuration/build.gradle
@@ -10,4 +10,5 @@ dependencies {
 
     compileOnly project(":cas-server-core-api-authentication")
     compileOnly project(":cas-server-core-util")
+    compileOnly project(":cas-server-core-api-webflow")
 }
