--- a/cas-server-core-webflow/build.gradle
+++ b/cas-server-core-webflow/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     compile project(":cas-server-core-web")
     compile project(":cas-server-core-api-ticket")
     compile project(":cas-server-core-api")
+    compile project(":cas-server-core-api-webflow")
 
     compile project(":cas-server-core-services")
     compile project(":cas-server-core-tickets")
