--- a/cas-management-webapp/build.gradle
+++ b/cas-management-webapp/build.gradle
@@ -9,6 +9,9 @@ javadoc {
 
 bootRun {
     addResources = true
+    if (Boolean.getBoolean("enableRemoteDebugging")) {
+        jvmArgs = ["-Xrunjdwp:transport=dt_socket,address=5000,server=y,suspend=n"]
+    }
 }
 
 springBoot  {
