--- a/cas-server-webapp/build.gradle
+++ b/cas-server-webapp/build.gradle
@@ -35,6 +35,9 @@ bootRun {
     }
 
     addResources = true
+    if (Boolean.getBoolean("enableRemoteDebugging")) {
+        jvmArgs = ["-Xrunjdwp:transport=dt_socket,address=5000,server=y,suspend=n"]
+    }
     systemProperties = System.properties
 }
 
