--- a/settings.gradle
+++ b/settings.gradle
@@ -68,6 +68,7 @@ include "cas-server-support-stormpath"
 include "cas-server-support-basic"
 include "cas-server-support-spnego"
 include "cas-server-support-spnego-webflow"
+include "cas-server-support-trusted-mfa"
 include "cas-server-support-trusted"
 include "cas-server-support-trusted-webflow"
 include "cas-server-support-digest-authentication"
