--- a/cas-server-support-duo/build.gradle
+++ b/cas-server-support-duo/build.gradle
@@ -1,9 +1,10 @@
 description = "Apereo CAS DuoSecurity Support"
 dependencies {
-
     compile libraries.duojava
     compile libraries.jackson
+    compile libraries.spring
     compile project(":cas-server-core-authentication")
     compile project(":cas-server-core-webflow")
+    compileOnly project(":cas-server-support-trusted-mfa")
 }
 
