--- a/cas-server-support-authy/build.gradle
+++ b/cas-server-support-authy/build.gradle
@@ -4,5 +4,6 @@ dependencies {
     compile libraries.jackson
     compile project(":cas-server-core-authentication")
     compile project(":cas-server-core-webflow")
+    compileOnly project(":cas-server-support-trusted-mfa")
 }
 
