--- a/cas-server-support-radius-mfa/build.gradle
+++ b/cas-server-support-radius-mfa/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compile project(":cas-server-core-webflow")
     compile project(":cas-server-core-web")
     compile project(":cas-server-support-radius-core")
+    compileOnly project(":cas-server-support-trusted-mfa")
 }
 
 
