--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -42,3 +42,9 @@ cas.authn.attributeRepository.attributes.givenName=givenName
 server.session.timeout=1800
 server.session.cookie.http-only=true
 server.session.tracking-modes=COOKIE
+
+##
+# CAS Cloud Bus Configuration
+# Please leave spring.cloud.bus.enabled set to false
+#
+spring.cloud.bus.enabled=false
