Added storage modules for trusted mfa

--- a/settings.gradle
+++ b/settings.gradle
@@ -69,6 +69,9 @@ include "cas-server-support-basic"
 include "cas-server-support-spnego"
 include "cas-server-support-spnego-webflow"
 include "cas-server-support-trusted-mfa"
+include "cas-server-support-trusted-mfa-jdbc"
+include "cas-server-support-trusted-mfa-mongo"
+include "cas-server-support-trusted-mfa-rest"
 include "cas-server-support-trusted"
 include "cas-server-support-trusted-webflow"
 include "cas-server-support-digest-authentication"
