--- a/webapp-mgmt/cas-management-webapp/build.gradle
+++ b/webapp-mgmt/cas-management-webapp/build.gradle
@@ -24,11 +24,13 @@ bootRepackage {
 }
 
 war {
+	def currentTime = java.time.ZonedDateTime.now()
+	
     manifest {
         attributes("Implementation-Title": project.name,
                 "Implementation-Vendor": project.group,
                 "Created-By": project.group,
-                "Implementation-Date": java.time.ZonedDateTime.now(),
+                "Implementation-Date": currentTime,
                 "Implementation-Version": project.version)
     }
     enabled = !rootProject.publishReleases && !rootProject.publishSnapshots
