--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,6 @@ script:
 - travis_wait ./gradlew test --stacktrace --parallel
 after_success:
 - chmod -R 777 ./travis/push-javadoc-to-gh-pages.sh
-- travis_wait ./travis/push-javadoc-to-gh-pages.sh
+- ./travis/push-javadoc-to-gh-pages.sh
 - chmod -R 777 ./travis/deploy-to-sonatype.sh
-- travis_wait ./travis/deploy-to-sonatype.sh
+- ./travis/deploy-to-sonatype.sh
