--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,9 @@ projectLicenseDistribution=repo
 projectIssueSystem=Github
 projectIssueUrl=https://github.com/apereo/cas/issues
 
+sonatypeRepositoryUrl=https://oss.sonatype.org/service/local/staging/deploy/maven2/
+sonatypeSnapshotsRepositoryUrl=https://oss.sonatype.org/content/repositories/snapshots/
+
 gradleVersion=3.1
 sourceCompatibility=1.8
 targetCompatibility=1.8
