Working on non-interactive authn with mfa

--- a/support/cas-server-support-trusted/build.gradle
+++ b/support/cas-server-support-trusted/build.gradle
@@ -3,6 +3,7 @@ description = "Apereo CAS Trusted User Support"
 dependencies {
 
     compile project(":core:cas-server-core-web")
+    compile project(":core:cas-server-core-webflow")
     compile project(":core:cas-server-core-authentication")
     compile libraries.spring
     compile libraries.hibernate
