--- a/support/cas-server-support-x509/build.gradle
+++ b/support/cas-server-support-x509/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compile project(":core:cas-server-core-authentication")
     compile project(":core:cas-server-core-util")
     compile project(":core:cas-server-core-web")
+    compile project(":core:cas-server-core-webflow")
     compile project(":support:cas-server-support-ldap-core")
     compile libraries.bouncycastle
     compile libraries.spring
