--- a/gradle.properties
+++ b/gradle.properties
@@ -40,42 +40,45 @@ log4jVersion=2.6.2
 disruptorVersion=3.3.5
 inspektrVersion=1.5.GA
 
-springVersion=4.3.2.RELEASE
-springIntegrationVersion=4.3.1.RELEASE
+springVersion=4.3.3.RELEASE
+springIntegrationVersion=4.3.2.RELEASE
 springWebflowClientVersion=1.0.3
 springWebflowVersion=2.4.4.RELEASE
-springDataCommonsVersion=1.12.2.RELEASE
-springDataMongoDbVersion=1.9.2.RELEASE
-springSecurityVersion=4.1.2.RELEASE
-springSessionVersion=1.2.1.RELEASE
+springDataCommonsVersion=1.12.3.RELEASE
+springDataMongoDbVersion=1.9.3.RELEASE
+springSecurityVersion=4.1.3.RELEASE
+springSessionVersion=1.2.2.RELEASE
 
-springCloudConfigVersion=1.1.3.RELEASE
-springCloudStarterVersion=1.1.1.RELEASE
-springCloudStarterConfigVersion=1.1.3.RELEASE
-springCloudContextVersion=1.1.1.RELEASE
+springCloudConfigVersion=1.2.0.RELEASE
+springCloudStarterVersion=1.1.3.RELEASE
+springCloudStarterConfigVersion=1.2.0.RELEASE
+springCloudContextVersion=1.1.3.RELEASE
+
+kafkaSpringVersion=1.0.4.RELEASE
+zookeeperVersion=3.4.8
 
 eurekaClientVersion=1.4.11
 netflixServoVersion=0.10.1
 jerseyClientVersion=1.19.1
 springCloudEurekaVersion=1.1.5.RELEASE
 
-springCloudBusVersion=1.1.1.RELEASE
+springCloudBusVersion=1.2.0.RELEASE
 springCloudVaultVersion=1.0.0.BUILD-SNAPSHOT
 
-springBootVersion=1.4.0.RELEASE
-springBootTomcatVersion=8.5.4
+springBootVersion=1.4.1.RELEASE
+springBootTomcatVersion=8.5.5
 
 hibernateVersion=5.2.2.Final
 hibernateValidatorVersion=5.2.4.Final
 dom4jVersion=1.6.1
 
-thymeleafVersion=2.1.4.RELEASE
-thymeleafDialectVersion=1.3.3
+thymeleafVersion=3.0.1.RELEASE
+thymeleafDialectVersion=2.0.3
 
 casClientVersion=3.4.1
 casSecurityFilterVersion=2.0.6
 
-fongoVersion=2.0.7
+fongoVersion=2.0.9
 mongoDriverVersion=3.3.0
 jtaVersion=1.1
 
@@ -83,7 +86,7 @@ commonsLangVersion=3.4
 commonsJexlVersion=1.1
 commonsCodecVersion=1.10
 commonsIoVersion=2.5
-joolVersion=0.9.11
+joolVersion=0.9.12
 
 jodaTimeVersion=2.9.4
 reflectionsVersion=0.9.10
@@ -94,9 +97,9 @@ springWebmvcPac4jVersion=1.1.2
 pac4jVersion=1.9.2
 dropwizardMetricsVersion=3.1.2
 dropwizardMetricsSpringVersion=3.1.3
-jacksonDatabindVersion=2.8.2
+jacksonDatabindVersion=2.8.3
 jsonVersion=20160810
-hjsonVersion=2.0.1
+hjsonVersion=2.1.0
 personDirectoryVersion=1.8.2
 quartzVersion=2.2.3
 
@@ -107,13 +110,13 @@ yubicoVersion=3.0.1
 duoVersion=1.1
 authyVersion=1.1.0
 googleAuthVersion=1.1.1
-googleZxingVersion=3.2.1
-maxmindVersion=2.7.0
+googleZxingVersion=3.3.0
+maxmindVersion=2.8.0
 googleMapsGeoCodingVersion=0.1.15
 userInfoVersion=1.1.0
 
 ldaptiveVersion=1.2.0
-unboundidVersion=3.1.1
+unboundidVersion=3.2.0
 
 jcifsVersion=1.3.17
 jcifsExtVersion=0.9.4
@@ -124,7 +127,7 @@ jradiusVersion=jradius-1.1.5
 
 httpclientVersion=4.5.2
 
-hazelcastVersion=3.7
+hazelcastVersion=3.7.1
 
 memcachedEmbeddedVersion=1.06.4
 spymemcachedVersion=2.12.1
@@ -135,12 +138,12 @@ ehcacheVersion=2.10.2.2.21
 jcacheVersion=1.0.1
 
 hsqlVersion=2.3.4
-hikariVersion=2.4.7
+hikariVersion=2.5.1
 postgresqlVersion=9.4.1208.jre7
 mysqlVersion=6.0.3
 mariaDbVersion=1.4.6
         
-shiroVersion=1.2.6
+shiroVersion=1.3.2
 jose4jVersion=0.5.2
 
 nimbusJoseVersion=4.26.1
