--- a/webapp/cas-server-webapp/src/main/resources/application.properties
+++ b/webapp/cas-server-webapp/src/main/resources/application.properties
@@ -67,7 +67,7 @@ server.session.tracking-modes=COOKIE
 #
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
-
+spring.thymeleaf.mode=HTML
 ##
 # CAS Log4j Configuration
 #
