Handle JWT authentication based on pac4j 1.9.x

--- a/support/cas-server-support-token/build.gradle
+++ b/support/cas-server-support-token/build.gradle
@@ -2,6 +2,7 @@ description = "Apereo CAS JWT Token Authentication Support"
 dependencies {
     compile project(":api:cas-server-core-api")
     compile project(":core:cas-server-core-web")
+    compile project(":core:cas-server-core-webflow")
     compile project(":core:cas-server-core-authentication")
     compile project(":core:cas-server-core-services")
     compile project(":support:cas-server-support-pac4j-authentication")
