Trusted Devices UI

--- a/support/cas-server-support-reports/build.gradle
+++ b/support/cas-server-support-reports/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     compile project(":core:cas-server-core-util")
     compile project(":core:cas-server-core-monitor")
     compile project(":core:cas-server-core-authentication")
+    compileOnly project(":support:cas-server-support-trusted-mfa")
 
     provided project(":core:cas-server-core-audit")
 }
